# RubikG-Dev

./: CMakeLists.txt  Dev.kdev4  TD.kdev4  all_includes.h  main.cpp  rubik_head.h
.kdev4/: TD.kdev4
CLi/: CMakeLists.txt
CLi/include/: cli.h  def_colors.h  text_output.h
CLi/source/: _intro_screen.cpp  cli.cpp  def_colors.cpp  repl.cpp  repl_autocomp.cpp  text_output.cpp
containers/: CMakeLists.txt
containers/include/: bitmap_set.h  bool_array.h  cube_set.h  dynamic_array.h  dynamic_stack.h  qeueu.h  rotation_set.h  sequence.h
containers/source/: bitmap_set.cpp  cube_set.cpp  dynamic_array.cpp  dynamic_stack.cpp  sequence.cpp
core/: CMakeLists.txt
core/include/: base_types.h  bitmap_set.h  bool_array.h  cube_set.h  dynamic_array.h  oriented_cube.h  projection.h  rotation_set.h  sequence.h  simplex.h
core/source/: bitmap_set.cpp  cube_set.cpp  oriented_cube.cpp  projection.cpp  sequence.cpp  simplex.cpp
core/template_h/: cube_positions.h  cube_rotations.h  gen_rotation_set.h  rotation_set.h  rotation_set_manip.h  rubik.h  rubik_cli.h  rubik_print.h  smart_array.h
doc/: document_HU.rtf
engine/: CMakeLists.txt
engine/APIs/: connection_rules_api.h  evaluator_api.h  patch_api.h  root_api.h  subgroup_api.h
engine/factories/: connection_rules_factory.h  evaluator_factory.h  factories.h  generator_factory.h  patch_factory.h  root_factory.h  subgroup_factory.h
engine/include/: acceptance.h  cache_generator.h  containers.h  engine.h  engine_search.h  evaluator.h  insight.h  insight_print.h  node_chart.h  progress.h  qeueu.h  snapper.h  snapper2.h  snapshots.h  state_printer.h  subgroup.h  subgroup_cached.h
engine/interface/: interface.h
engine/services/: cube_scan.h  scan.h
engine/source/: acceptance.cpp  progress.cpp  progress_result_print.cpp
engine/structures/: evaluator.h  patch.h  subgroup.h
factory/: CMakeLists.txt  factory_array.cpp  factory_progress.cpp  factory_tree.h  factory_tree_create.cpp
factory/APIs/: connection_rules_api.cpp  evaluator_api.cpp  generator_api.cpp  patch_api.cpp  root_set_api.cpp  subgroup_api.cpp
factory/base/: acceptance.cpp  acceptance.h  node_chart.h  patch.h  pattern.h
factory/factories/: connection_rules_factory.cpp  evaluator_factory.cpp  generator_factory.cpp  patch_factory.cpp  root_set_factory.cpp  subgroup_factory.cpp
factory/include/: node_chart.h
factory/main/: control_panel.h  factory.cpp  factory_task.cpp  factory_tree.h  factory_tree_create.cpp  state_api.h  state_factory.h  task.h  worker.h
framework/include/: cube_positions.h  cube_rotations.h  gen_rotation_set.h  rubik.h
framework/source/: cube_positions.cpp  cube_rotations.cpp  gen_rotations.cpp  rubik.cpp  rubik_print.cpp
guidance/: guide.h  guide_base.h  guide_container.h  guide_handler.h  guide_handler_base.h  guide_manager.h  guide_manager_base.h  guide_scheduler.h  node.h  node_init.h  symmetry.h  symmetry_counter.h
progress/: CMakeLists.txt  guide.h  guide_handler.h  navigation.h  node.h  node_init.h  progress.h  progress_state.cpp  progress_tree.h  progress_worker.cpp  scheduler.h  shift_control.h  signpost.h  sub_tree.h
rubik/include/: rubik.h  rubik_api.h  rubik_group.h  rubik_slot.h
rubik/source/: rubik.cpp  rubik_api.cpp  (+2 more)
rubikAI/: CMakeList.txt
test/: CMakeLists.txt  test.h  test_cube_3.rub
test/common/: test_common.cpp  test_launchers.cpp  test_random.cpp  test_timer.cpp
test/core/: u_cextrotations.cpp  u_crotations.cpp  u_cubeset.cpp  u_genrotationset.cpp  u_projection.cpp  u_rubik.cpp  u_simplex.cpp
test/engine/: u_engine.cpp  u_insight.cpp  u_progress.cpp  u_raw_map.cpp  u_snapper.cpp  u_state.cpp  u_state_map.cpp  u_subgroup.cpp
test/progress/: u_progress.cpp
test/rubik_ai/: u_resolver.cpp  u_rubikai.cpp
test/test_data/cubes/2/: 17_20.rub  19_22.rub  20_23.rub
test/test_data/cubes/3/task_1/: 25_28.rub
test/test_data/cubes/3/task_2/: 36_39.rub
test/test_data/cubes/3/task_3/: 33_36.rub
test/test_data/cubes/3/task_4/: 38_44.rub
test/test_data/cubes/3/task_6/: 50_53.rub  55_60.rub  56_59.rub  58_64.rub  63_66.rub
test/test_data/cubes/3/task_7/: 69_72.rub
(+38 files in other folders)
